# mobilenet-ssd-snpe

./: .gitignore  CMakeLists.txt  build.sh  build_arm.sh  compare_two_outputs.py  detection_out.txt  image_to_raw.py  install_caffe_4_snpe.txt  readme.md  run_example.sh  show_ssd_result.py  test-mobilenet-ssd-cpu  test_snpe_cpp_demo.cpp
android/: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: .gitignore  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/mobilenet-ssd-img/: 1.raw  test_resized.raw
android/app/src/main/java/com/baidu/snpe/: MainActivity.java  SnpeEngine.java
android/app/src/main/jni/cpp/: snpe_engine_jni.cpp
android/app/src/main/jni/include/DlSystem/: DlEnums.hpp
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
data/: VOC_raw_list.txt
data/VOC_raw/: 0.raw  10.raw  100.raw  101.raw  102.raw  103.raw  104.raw  105.raw  106.raw  107.raw  108.raw  109.raw  11.raw  110.raw  111.raw  112.raw  113.raw  114.raw  115.raw  116.raw  117.raw  118.raw  119.raw  12.raw  120.raw  121.raw  122.raw  123.raw  124.raw  125.raw  126.raw  127.raw  128.raw  129.raw  13.raw  130.raw  131.raw  132.raw  133.raw  134.raw  (+159 more)
include/snpe/zdl/SnpeUdo/: UdoBase.h  UdoImplDsp.h
model/: deploy.prototxt
src/: snpe_engine.cpp  snpe_engine.h  test_snpe.cpp
util/: Util.cpp
